--- a/PlottedAssist/Views/PlantInfo/Prune.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Prune.cshtml
@@ -13,82 +13,246 @@
         <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
         </div>
-        <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:80px;">
-            <h2 class="white-word">Prunning</h2>
+        <div class="col-md-8 col-md-offset-2" style="margin-top:50px;padding-bottom:20px;">
+            <h1 class="white-word">Prunning</h1>
             <p class="white-word">
                 In natural conditions plants are always in the process of pruning - animals eat the foliage and break branches as they trample through the bush. Unless the damage is severe the plants survive these set-backs and vigorous, healthy new growth follows.
             </p>
 
             <h1 class="white-word">Why Prune?</h1>
-            <ul class="white-word">
-                <li>
-                    <b>Appearance of Plant</b><br>
+
+        </div>
+    </div>
+    <div class="panel-group" id="accordion" style="width:70%; margin:auto;margin-bottom:5%;">
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseDNF">
+                        Appearance of Plant
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseDNF" class="panel-collapse collapse in">
+                <div class="panel-body">
                     Garden design, personal preferences, and the function of a particular plant determine the type and degree of pruning for appearance each plant should be given. For example, a screening plant might be regularly pruned to make it bushy, or a plant in a natural bushland setting might only be occasionally lightly pruned to blend in with the rest of the garden while maintaining a “natural” appearance.
-                </li>
-                <li>
-                    <b>Prune to get a beautiful shape</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseITF">
+                        Prune to get a beautiful shape
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseITF" class="panel-collapse collapse">
+                <div class="panel-body">
                     Heavy pruning is used to remove unwanted growth so a plant remains in proportion with the rest of the garden. Pruning to ground level is used on plants with a lignotuber, and suckering plants, to encourage the growth of multiple stems leading to a better shape, more foliage, and more flowers. Lignotuber is a woody swelling at or below the ground level containing buds from which new growth forms if the top of the plant is cut or burnt.
-                </li>
-                <li>
-                    <b>pruning the Tips</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF">
+                        Pruning the Tips
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF" class="panel-collapse collapse">
+                <div class="panel-body">
                     Carried out by pinching out the growing shoots forcing the plant to make new growth further back along the branch. This increases the number of flowers, makes the plant bushy, and prevents it from becoming straggly. Tip pruning can be started when the plant is young.
-                </li>
-                <li>
-                    <b>Pick the flowers</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF1">
+                        Pick the flowers
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF1" class="panel-collapse collapse">
+                <div class="panel-body">
                     Picking flowers for indoor use and removal of old flowers immediately flowering finishes, stop the plant from putting energy into seed production thereby increasing flower production next season.
-                </li>
-                <li>
-                    <b>Regular light pruning</b><br>
+                    <br><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF2">
+                        Regular light pruning
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF2" class="panel-collapse collapse">
+                <div class="panel-body">
                     Used to promote and maintain dense growth of hedge and screening plants right down to ground level.
-                </li>
-                <li>
-                    <b>Maintenance of plant health</b><br>
+                    <br><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF3">
+                        Maintenance of plant health
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF3" class="panel-collapse collapse">
+                <div class="panel-body">
                     Remove diseased and damaged wood as soon as possible. Clean out unwanted foliage in the center of the plant to promote air movement and allow light to penetrate, thereby discouraging pests and disease.
-                </li>
-                <li>
-                    <b>Rejuvenation of old plants</b><br>
+                    <br><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF4">
+                        Rejuvenation of old plants
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF4" class="panel-collapse collapse">
+                <div class="panel-body">
                     Severe pruning rejuvenates and extends the life of many types of plants.
-                </li>
-            </ul>
-
-
+                    <br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="background-color:#4F6657;">
+        <div class="col-md-8 col-md-offset-2" style="margin-top:0px;padding-bottom:5px;">
             <h2 class="white-word">Pruning Rules</h2>
-            <ul class="white-word">
-                <li>
-                    <b>Keep pruning tools sharp and clean</b><br>
+        </div>
+        </div>
+           
+    <div class="panel-group" id="accordion1" style="width:70%; margin:auto;margin-bottom:0%;">
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapse1">
+                        Keep pruning tools sharp and clean
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse in">
+                <div class="panel-body">
                     Ensure your pruning tools are sharp and kept clean by regular washing in disinfectant. Blunt, dirty tools damage plant tissue and introduce disease organisms. Keep the cutting blades of secateurs and shears free of build-ups which might wedge between the blades springing them apart leading to bruising of plant tissue and ragged cuts.
-                </li>
-                <li>
-                    <b>Use the plant’s natural habit of growth as a guide to its pruning requirements</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapse2">
+                        Use the plant’s natural habit of growth as a guide to its pruning requirements
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse2" class="panel-collapse collapse">
+                <div class="panel-body">
                     Plants that grow slowly should only require light pruning to keep them tidy and well-shaped. Fast-growing plants may require frequent tip pruning and general pruning.
-                </li>
-                <li>
-                    <b>Prune shrubs back by about one-third of the new growth and always ensure some green leaves remain</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapse3">
+                        Prune shrubs back by about one-third of the new growth and always ensure some green leaves remain
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+                <div class="panel-body">
                     This rule applies except in extreme circumstances such as rejuvenating an old plant, or where specific knowledge of a particular plant’s response to pruning suggests a different approach. Hard pruning into old wood may kill some plants or cause the loss of next season’s flower crop in species.
-                </li>
-                <li>
-                    <b>Pruning cuts</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapse4">
+                        Pruning cuts
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse4" class="panel-collapse collapse">
+                <div class="panel-body">
                     Make pruning cuts at an angle so water will run off and not collect in growing shoots where it will encourage fungal growth. Undercut branches before making the top cut to remove them. This ensures a clean cut by preventing bark underneath the branch being torn from the plant or wood splintering as the branch falls away. If the branch is very heavy, cut it off a few centimeters further out from the trunk than your final cut so that most of the weight has been removed. Then make your final cut to remove the remaining short stub of the branch from the plant. Disguise cuts by making them inside the plant’s foliage envelope so that the cuts are hidden by the remaining foliage.
-                </li>
-                <li>
-                    <b>Old and over-size plants</b><br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion1" href="#collapse5">
+                        Old and over-size plants
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse5" class="panel-collapse collapse">
+                <div class="panel-body">
                     If a plant has got to the stage where you have nothing to lose, prune hard and see what happens. Plants requiring constant heavy pruning to constrain their size are too big for the location. Consider replacing them with a smaller plant.
-                </li>
+                </div>
+            </div>
+        </div>
 
-            </ul>
-
+    </div>
+    <div class="row" style="background-color:#4F6657;">
+        <div class="col-md-8 col-md-offset-2" style="margin-top:10px;padding-bottom:5px;">
             <h2 class="white-word">When to Prune</h2>
             <p class="white-word">
                 Depending on your local climate and current weather patterns, late winter to early summer and late summer to early winter are generally the best times to prune in Victoria.<br>
-                ♦ <b>Established plants</b><br>
-                Remove old dead flowers immediately after flowering. General pruning as needed whenever weather conditions are suitable.<br>
-                ♦ <b>New plantings</b><br>
-                Tip prune from an early stage if a bushy, compact plant is desired. On planting, establish the future shape of the plant by removing unwanted branches.
+               
             </p>
 
         </div>
-        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
-            <a href="@Url.Content("~/PlantInfo/Sunshine")" class="btn btn-success">Next: Sunshine Guide</a>
-        </div>
     </div>
+    <div class="panel-group" id="accordion2" style="width:70%; margin:auto;margin-bottom:0%;">
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion2" href="#collapse11">
+                        ♦ Established plants
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse11" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    Remove old dead flowers immediately after flowering. General pruning as needed whenever weather conditions are suitable.<br>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239;">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion2" href="#collapse12">
+                        ♦ New plantings
+                    </a>
+                </h4>
+            </div>
+            <div id="collapse12" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Tip prune from an early stage if a bushy, compact plant is desired. On planting, establish the future shape of the plant by removing unwanted branches.<br>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+        <div class="row" style="background-color:#4F6657;">
+            <div class="col-md-8 col-md-offset-2" style="margin-top:10px;padding-bottom:5px;">
+                <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+                    <a href="@Url.Content("~/PlantInfo/Sunshine")" class="btn btn-success">Next: Sunshine Guide</a>
+                </div>
+            </div>
+        </div>
 
