change my garden card layout

--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -26,7 +26,10 @@
         <div style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%;">
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)" style="margin-top:50px"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
-
+        
+        <div class="white-word" style="margin-bottom:75px;text-align:center">
+            <h2>Based on your preference, here is eligible indigenous plants what we have found.</h2>
+        </div>
         
         <div class="col-md-10 col-md-offset-1">
             @foreach (var item in Model)
