--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -60,12 +60,12 @@
                     {
                         index = index + 4;
                     <div class="col-md-12 col-xs-12" style="text-align:center; border-radius:5px;padding: 20px;padding-bottom:10px; border: thin; background: #1E2621; border-radius: 5px; box-shadow: 2px 2px 6px 2px #1E2621; margin-bottom: 40px;">
-                        <div class="col-md-5 white-word" style="border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;text-align:center">
-                            <img src="@Url.Content("~/Picture/PlantSet/" + item.PlantSet.PlantPhotoPath)" style="border-radius:5px;box-shadow:0px 0px 8px 5px #1E2621;width:100%;max-width:250px">
+                        <div class="col-md-5 col-xs-12 " style="border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;">
+                            <img src="@Url.Content("~/Picture/PlantSet/" + item.PlantSet.PlantPhotoPath)" style="border-radius:5px;box-shadow:0px 0px 8px 5px #1E2621;width:100%;max-width:250px;margin-left:-20%">
                         </div>
 
-                        <div class="col-md-7 col-md-offset-0 white-word" style="font-size:18px;font-weight:bold">
-                            <div class="col-md-7 white-word" style="margin-top: 20px;margin-bottom: 8%;font-size:18px">
+                        <div class="col-md-7 white-word" style="font-size:18px;font-weight:bold;">
+                            <div class="col-md-7 white-word" style="margin-top: 20px;margin-bottom: 8%;font-size:18px;margin-left:-3%">
                                 @Html.DisplayFor(modelItem => item.plantNickName)
                             </div>
 
@@ -86,13 +86,13 @@
                                 <img src="~/Picture/Icon/Mist.png" height="30" width="30">
                                 @ViewBag.DaysList[index - 2]
                             </div>
-                            <div class="col-md-4" style="padding: 0px;margin-bottom: 8%;">
+                            <div class="col-md-4" style="padding: 0px;margin-bottom: 5%;">
                                 <a href="@Url.Content("../PlantSets/Details/" + item.PlantSet.Id)" class="btn btn-default" style="background: #344239; color:white; text-align: center;border-radius:15px;border:0px;width:80px">Info</a>
                             </div>
-                            <div class="col-md-4" style="padding: 0px;margin-bottom: 8%;">
+                            <div class="col-md-4" style="padding: 0px;margin-bottom: 5%;">
                                 <a href="@Url.Content("~/Dashboard/Edit/" + item.Id)" class="btn btn-default " style="background: #344239; color:white; text-align: center;border-radius:15px;border:0px;width:80px"> Setting</a>
                             </div>
-                            <div class="col-md-4" style="padding: 0px;margin-bottom: 8%;">
+                            <div class="col-md-4" style="padding: 0px;margin-bottom: 5%;">
                                 <a href="@Url.Content("~/Dashboard/Delete/" + item.Id)" class="btn btn-default " style="background: #344239; color:white; text-align: center;border-radius:15px;border:0px;width:80px"> Remove</a>
                             </div>
                         </div>
