--- a/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
+++ b/PlottedAssist/Views/PlantInfo/WateringGuide.cshtml
@@ -3,6 +3,14 @@
     ViewBag.Title = "WateringGuide";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<head>
+
+
+</head>
+<body>
+    <div class="row" style="background-color:#4F6657;">
+
         <!--Header-->
         <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/Banner/PlantingInfoBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
@@ -21,58 +29,119 @@
 
                 Use water wisely. Water plants when they need it, not by the clock or calendar. Even though we recommend the watering days, water according to your soil type and the weather. Do not apply water faster than the soil can absorb it. Check the soil moisture first. Choose the right method. A soaker hose applies water directly to the soil and reduces evaporation. If you are planting a few plants in an existing planting bed, hand watering can be an effective way to get the new plants the water they need, while not overwatering the rest of the bed. <br><br>
 
-                <b>Remember…. </b>
+
             </p>
-            <ul class="white-word">
-                <li>Avoid planting in hot, dry weather, which can easily stress plants. If you must plant in summer, plant in the cool of the morning. </li>
-                <li>Watering early in the morning means less water is lost to evaporation.</li>
-                <li>Even drought-tolerant plants need regular water until they are established.</li>
-            </ul>
+            <img src="~/Picture/remember.png" style="width:640px;height:520px;">
             <p class="white-word">
                 The following are general guidelines. How often and how long you water will depend on your soil and other factors.
-                <br><br>
             </p>
-            <h3 class="white-word">Year One</h3>
-            <p class="white-word">
-                When Planting Water plants as soon as you get them in the ground. Allow the water to soak in and drain, and water again, until the soil is thoroughly moistened. Spring through Fall, When Weather is Dry For the first week or so after planting… Water just-planted plants frequently - daily or every other day - as the roots will not be able to access soil moisture from a very large area until they begin to grow. After the first week or so... Unless the weather is extremely hot and dry, you may be able to decrease the watering frequency, perhaps to two or three times per week, for the next month or so.
-            </p>
-            <h3 class="white-word">Years Two to Three </h3>
-            <p class="white-word">
-                You should need to water deeply only once or twice per week in dry weather if you have selected the right plant for the right place, prepared the soil and planted correctly, and mulched your plants. Exactly how often and how long you water will depend on your soil and other conditions.
-            </p>
-            <h3 class="white-word">After Year Three </h3>
-            <p class="white-word">
-                Properly planted and watered, plants should be fairly well established by now, and can thrive with less watering than you may expect. Plants selected for drought tolerance in your conditions may need no supplemental water, whereas shallow-rooted plants or plants with greater water needs may need water weekly. Many plants, when selected for the conditions in your yard and watered according to the above guidelines, may need watering only a couple of times per month in dry weather. Remember that all plants will benefit from deeper and less frequent watering as a general rule.
-            </p>
-            <h3 class="white-word">Container Plants </h3>
-            <p class="white-word">
-                Check them daily during the summer, as containers tend to dry out quickly. On a hot day in full sun, you may need to water twice. To determine whether a container needs water, stick your finger into the soil. If it’s dry down to the first knuckle on your index finger, add water. If the soil is damp, don’t water. Always apply enough water so that some drips out the bottom drain hole. If your plant is wilting or the soil is dry and pulling away from the edge of the pot, your plant needs immediate watering. Place the pot in a bucket or saucer of water, so that it can soak water right up into the soil rather than running around the root ball. The type of potting soil used will affect watering as will the type of container used. Unglazed clay pots typically dry out faster than plastic pots.
-            </p>
-            <h3 class="white-word">Watering plants at night</h3>
-            <p class="white-word">
-                Preferably don’t water at night. Watering cycles have to be adjusted during the 'night-time' period because plants don’t use as much water as they do during the 'day time'. Don’t forget that the dark cycle is critical to plant development. This holds true for cloudy days or high humidity periods. But do be sure to adjust the irrigation cycle to water in the last or first half-hour of light.
-            </p>
-            <h3 class="white-word">Helpful Tips </h3>
-            <ul class="white-word">
-                <li></li>
-                <li>Know your soil type, as this greatly affects watering frequency and duration. </li>
-                <li>Allow the top inch or two of soil to dry between waterings to encourage deep roots.</li>
-                <li>Group plants with similar water needs together. </li>
-                <li>Consider using soaker hoses, as you can get water where you need it and lose less to evaporation. </li>
-                <li>Young trees will need deep regular watering during their growing periods. During periods of little or no rain, water deeply once a week until they become established. Water established trees during heat waves and drought conditions. </li>
-                <li>Spot-water plants with different needs than the rest of the planting bed. </li>
-                <li>Remember that shallow-rooted plants such as rhododendrons, azaleas, heathers and bedding plants may continue to need more frequent watering than most other plants.</li>
-                <li>Mulch for moisture. Mulch reduces water loss and adds humus to your soil to retain more moisture. </li>
-                <li>Check for soil moisture before – and after - you water:<br>Before you water: Generally, you want the soil to be dry an inch or two below the surface before you water, so probe with a spade or trowel to check. </li>
-            </ul>
-            <p class="white-word">
-                At least one hour after you water (or longer with clay soil): Probe into the soil again to see how deeply the water penetrated. Did it penetrate all the way to the root zone? If not, you may need to increase your watering time. But if the area looks well-saturated, you may want to cut back the next time.
-
-            </p>
-
         </div>
-        <!--Next page-->
-        <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-6 col-sm-offset-8 col-md-offset-9 col-lg-offset-10" style="margin-bottom:75px">
-            <a href="@Url.Content("~/PlantInfo/SoilTypes")" class="btn btn-success">Next: Soil Info</a>
+    </div>
+
+    <div class="panel-group" id="accordion" style="width:70%; margin:auto;margin-bottom:5%;">
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseDNF">
+                        Year One
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseDNF" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    When Planting Water plants as soon as you get them in the ground. Allow the water to soak in and drain, and water again, until the soil is thoroughly moistened. Spring through Fall, When Weather is Dry For the first week or so after planting… Water just-planted plants frequently - daily or every other day - as the roots will not be able to access soil moisture from a very large area until they begin to grow. After the first week or so... Unless the weather is extremely hot and dry, you may be able to decrease the watering frequency, perhaps to two or three times per week, for the next month or so.
+                </div>
+            </div>
         </div>
-    
+
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseITF">
+                        Years Two to Three
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseITF" class="panel-collapse collapse">
+                <div class="panel-body">
+                    You should need to water deeply only once or twice per week in dry weather if you have selected the right plant for the right place, prepared the soil and planted correctly, and mulched your plants. Exactly how often and how long you water will depend on your soil and other conditions.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF">
+                        After Year Three
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Properly planted and watered, plants should be fairly well established by now, and can thrive with less watering than you may expect. Plants selected for drought tolerance in your conditions may need no supplemental water, whereas shallow-rooted plants or plants with greater water needs may need water weekly. Many plants, when selected for the conditions in your yard and watered according to the above guidelines, may need watering only a couple of times per month in dry weather. Remember that all plants will benefit from deeper and less frequent watering as a general rule.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF1">
+                        Container Plants
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF1" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Check them daily during the summer, as containers tend to dry out quickly. On a hot day in full sun, you may need to water twice. To determine whether a container needs water, stick your finger into the soil. If it’s dry down to the first knuckle on your index finger, add water. If the soil is damp, don’t water. Always apply enough water so that some drips out the bottom drain hole. If your plant is wilting or the soil is dry and pulling away from the edge of the pot, your plant needs immediate watering. Place the pot in a bucket or saucer of water, so that it can soak water right up into the soil rather than running around the root ball. The type of potting soil used will affect watering as will the type of container used. Unglazed clay pots typically dry out faster than plastic pots.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF2">
+                        Watering plants at night
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF2" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Preferably don’t water at night. Watering cycles have to be adjusted during the 'night-time' period because plants don’t use as much water as they do during the 'day time'. Don’t forget that the dark cycle is critical to plant development. This holds true for cloudy days or high humidity periods. But do be sure to adjust the irrigation cycle to water in the last or first half-hour of light.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading" style="background-color:#344239">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseKF3">
+                        Helpful Tips
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseKF3" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <ul>
+                        <li>Know your soil type, as this greatly affects watering frequency and duration. </li>
+                        <li>Allow the top inch or two of soil to dry between waterings to encourage deep roots.</li>
+                        <li>Group plants with similar water needs together. </li>
+                        <li>Consider using soaker hoses, as you can get water where you need it and lose less to evaporation. </li>
+                        <li>Young trees will need deep regular watering during their growing periods. During periods of little or no rain, water deeply once a week until they become established. Water established trees during heat waves and drought conditions. </li>
+                        <li>Spot-water plants with different needs than the rest of the planting bed. </li>
+                        <li>Remember that shallow-rooted plants such as rhododendrons, azaleas, heathers and bedding plants may continue to need more frequent watering than most other plants.</li>
+                        <li>Mulch for moisture. Mulch reduces water loss and adds humus to your soil to retain more moisture. </li>
+                        <li>Check for soil moisture before – and after - you water:<br>Before you water: Generally, you want the soil to be dry an inch or two below the surface before you water, so probe with a spade or trowel to check. </li>
+                    </ul>
+                    <p>
+                        At least one hour after you water (or longer with clay soil): Probe into the soil again to see how deeply the water penetrated. Did it penetrate all the way to the root zone? If not, you may need to increase your watering time. But if the area looks well-saturated, you may want to cut back the next time.
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10" style="margin-bottom:10px;">
+        <a href="@Url.Content("~/PlantInfo/SoilTypes")" class="btn btn-success">Next: Soil Info</a>
+    </div>
+</body>
+
+
