Plant Info Page Fix

--- a/PlottedAssist/Views/PlantInfo/Prune.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Prune.cshtml
@@ -255,7 +255,7 @@
         </div>
         <div class="row" style="background-color:#4F6657;">
             <div class="col-md-8 col-md-offset-2" style="margin-top:10px;padding-bottom:5px;">
-                <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+                <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10" style="margin-bottom:10px;">
                     <a href="@Url.Content("~/PlantInfo/Sunshine")" class="btn btn-success">Next: Sunshine Guide</a>
                 </div>
             </div>
