--- a/PlottedAssist/Views/PlantInfo/PlantInfo.cshtml
+++ b/PlottedAssist/Views/PlantInfo/PlantInfo.cshtml
@@ -10,9 +10,7 @@
 </head>
 <body>
     <div class="row" style="background-color:#4F6657;">
-        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
-
-            <!--Header-->
+          <!--Header-->
 
             <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/Banner/PlantingInfoBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
 
@@ -179,12 +177,12 @@
 
             </div>
 
-            <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+            <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10" style="margin-bottom:10px;">
                 <a href="@Url.Content("~/PlantInfo/WateringGuide")" class="btn btn-success">Next: Watering Guide</a>
             </div>
             <div></div>
         </div>
-        </div>
+        
 </body>
 
 
